This file documents the revision history for the Monitoring Webinterface Thruk.

2.00     NOT YET RELEASED
          - changed internal storage format to json everywhere
          - improved memory usage
          - improved startup time
          - improved page rendering
          - users can change their htpasswd passwords
          - retry setting recurring downtimes in case of errors
          - fix redirect without trailing slash on login
          - fix event log filter for unprivileged contacts (#406)
          - fix shadownaemon using the livestatus wait feature
          - Panorama View:
            - fix missing Sitename in services/host widgets
          - Business Process:
            - fix using backslashes in business process object names (#485)

          Incompatible Changes:
          - custom thruk plugins have to be adopted to thruk 2, see migration
            help document: http://thruk.org/documentation/thruk_2_0_migration_guide.html
          - enable use_frames mode by default
          - enable cookie authentication by default

1.88-4   Wed Apr 22 16:16:09 CEST 2015
          - Config Tool:
            - fix editing objects
            - add tools to semi-automatically clean configs from common flaws
          - Panorama View:
            - fix scaling and setting offsets for background

1.88-3   Sat Apr 18 11:44:40 CEST 2015
          - mongodb logcache is now deprecated and will be removed 2016
          - add pnp graph select option on extinfo pages
          - fix error on omd updates with recurring downtimes
          - fix permission problem with service recurring downtimes
          - Business Process:
            - fix business process cron entry being remove when updating reports
          - Reports:
            - display error message if report cannot be created due to missing hosts/services
            - fix problem for reports using contacts with authorized by groups
          - Panorama View: