@@ -143,9 +143,16 @@ exit 0
 
 %post base
 chkconfig --add thruk
-mkdir -p /var/cache/thruk/reports /var/log/thruk /etc/thruk/bp /var/lib/thruk
+mkdir -p /var/cache/thruk/reports /var/log/thruk /etc/thruk/bp /var/lib/thruk /etc/thruk/thruk_local.d
 touch /var/log/thruk/thruk.log
-chown -R %{apacheuser}:%{apachegroup} /var/cache/thruk /var/log/thruk/thruk.log /etc/thruk/plugins/plugins-enabled /etc/thruk/thruk_local.conf /etc/thruk/bp /var/lib/thruk
+chown -R %{apacheuser}:%{apachegroup} \
+                /var/lib/thruk \
+                /var/cache/thruk \
+                /var/log/thruk \
+                /etc/thruk/plugins/plugins-enabled \
+                /etc/thruk/thruk_local.conf \
+                /etc/thruk/bp \
+                /etc/thruk/thruk_local.d
 /usr/bin/crontab -l -u %{apacheuser} 2>/dev/null | /usr/bin/crontab -u %{apacheuser} -
 %if %{defined suse_version}
 a2enmod alias
@@ -207,6 +214,7 @@ case "$*" in
     rmdir /etc/thruk/plugins/plugins-enabled 2>/dev/null
     rmdir /etc/thruk/plugins 2>/dev/null
     rmdir /etc/thruk/bp 2>/dev/null
+    rmdir /etc/thruk/thruk_local.d 2>/dev/null
     rmdir /etc/thruk 2>/dev/null
     rmdir /usr/share/thruk/plugins/plugins-available 2>/dev/null
     rmdir /usr/share/thruk/plugins 2>/dev/null
